Fix z-index issues Fix crash of header, cart and overlay z index Change the margin of bottom and top for better ux

--- a/src/css-modules/root.module.css
+++ b/src/css-modules/root.module.css
@@ -2,10 +2,9 @@
 
 body {
   background-color: #0f1010;
-  margin: 10px 0;
+  margin: 10px 0 20px 0;
   padding: 0;
 }
-
 
 .rootContainer {
   display: flex;
@@ -26,5 +25,5 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 100;
+  z-index: 3000;
 }
